# parliamentarian

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
parliamentarian/: __init__.py  cli.py  finding.py  policy.py  statement.py
parliamentarian/community_auditors/: advanced_policy_elements.py  sensitive_access.py  single_value_condition_too_permissive.py
parliamentarian/community_auditors/tests/: test_advanced_policy_elements.py  test_credentials_exposure.py  test_permissions_management.py  test_privilege_escalation.py  test_sensitive_access.py  test_single_value_condition_too_permissive.py
tests/scripts/: run-all-tests.sh  unit_tests.sh
tests/unit/: test_action_expansion.py  test_authorization_file.py  test_community_auditors.py  test_formatting.py  test_get_resources_for_privilege.py  test_patterns.py  test_principals.py  test_privilege_data.py  test_resource_formatting.py  test_resources.py
