[project]
classifiers=[
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3 :: Only",
        "Development Status :: 5 - Production/Stable",
    ]

[tool.poetry]
name = "parliamentarian"
version = "1.0.0"
description = "parliamentarian audits your AWS IAM policies."
readme = "README.md"
authors = [
    "Duo Security <scott@summitroute.com>",
    "Climate LLC <cloudeng@climate.com>",
]
packages = [
    { include = "parliamentarian" }
]
license = "BSD 3"
keywords = [
    "aws",
    "parliamentarian",
    "iam",
    "lint",
    "audit"
]

[tool.poetry.scripts]
parliamentarian= "parliamentarian.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = [
    { version = ">=1.25.4,<1.27", python = "<3.10" },
    { version = "^2.2,!=2.2.0,<3", python = ">=3.10" }
]
attrs = "^23.2"
beautifulsoup4 = "^4.12"
boto3 = "^1.34"
botocore = "^1.34"
certifi = "2024.2.2"
chardet = "^5.2"
charset-normalizer = "^3.3"
docutils = "^0.20.1"
idna = "3.7"
iniconfig = "^2.0"
jmespath = "1.0.1"
json-cfg = "0.4.2"
kwonly-args = "1.0.10"
packaging = "^24.0"
pluggy = "^1.5"
pyparsing = "^3.1"
python-dateutil = "^2.9"
PyYAML = "6.0.1"
s3transfer = "^0.10"
requests = "^2.32"
six = "1.16.0"
soupsieve = "^2.5"
tomli = "2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
coverage = "^7.5"
pytest-cov = "^5.0"
# TODO: nose is in maintenance mode, this should be replaced with another library
nose = "^1.3.7"
autoflake = "^2.3.1"
autopep8 = "^2.1.1"
pylint = "^3.2.2"
flake8 = [
    { version = "<7.0.0", python = "<3.8.1" },
    { version = "^7.0.0", python = ">=3.8.1" }
]
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"
types-pyyaml = "^6.0.12.20240311"
types-setuptools = "^69.5.0.20240522"

[project.urls]
Homepage = "https://github.com/TheClimateCorporation/parliamentarian"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "TCC",
    "FIRSTPARTY",
    "TESTS",
    "LOCALFOLDER",
]
known_tcc = ""
known_tests = "tests"

[tool.coverage]
[tool.coverage.run]
source = ["tcc_parliament"]
branch = true
command_line = "-m pytest --junitxml=coverage-reports/junit.xml"

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_lines = ["raise NotImplementedError"]

[tool.coverage.xml]
output = "coverage-reports/coverage.xml"

[tool.pylint]
[tool.pylint.master]
disable = "all"
enable = "E"

[[tool.mypy.overrides]]
module = [
    "parliamentarian",
    "parliamentarian.misc",
    "jsoncfg",
    "jsoncfg.config_classes",
    "parliamentarian.finding",
    "parliamentarian.policy",
    "nose.tools"
]
ignore_missing_imports = true
